[package]
name = "rain-helpers"
version = "0.1.0"
edition = "2021"
exclude = ["main.rs"]

[lib]
path = "src/lib.rs"

[dependencies]
anchor-lang = "^0.26"
anchor-spl = "^0.26"
solana-program = "^1"
solana-rpc-client = "^1"
solana-rpc-client-api = "^1"
solana-account-decoder = "^1"
tokio = {version = "1", features = ["full"] }

[dev-dependencies]
solana-sdk = "^1"
